--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,5 +4,8 @@
     </head>
     <body>
         <h1>Hello PassportJS </h1>
+        <form action="/logout?_method=delete" method="POST">
+            <button type="submit"> Logout </button>    
+        </form>
     </body>
 </html>
